Fix lightbox caption overflow scroll in ios (#10171)

--- a/extensions/amp-lightbox-viewer/0.1/amp-lightbox-viewer.css
+++ b/extensions/amp-lightbox-viewer/0.1/amp-lightbox-viewer.css
@@ -88,6 +88,7 @@
 
 .i-amphtml-lbv-desc-box.overflow {
   overflow-y: auto !important;
+  -webkit-overflow-scrolling: touch !important;
   background-color: rgba(0,0,0,0.7);
   top: 0 !important;
   padding-top: 50px !important;
@@ -108,8 +109,6 @@
 }
 
 .i-amphtml-lbv-desc-box.overflow .i-amphtml-lbv-desc-text {
-  position: absolute !important;
-  bottom: 0;
   padding-top: 0;
 }
 
